@@ -2,20 +2,37 @@ require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
 
 describe TasksController do
 
+  VIEWS = %w(pending assigned completed).freeze
+
   def update_sidebar
     @task_total = { :key => :value, :pairs => :etc }
     Task.stub!(:totals).and_return(@task_total)
   end
 
   def produce_tasks(user, view)
-    Setting.as_hash(:task_due_at_hint).keys.inject({}) do | hash, due |
+    # settings = (view == "completed" ? Setting.task_completed : Setting.task_due_at_hint)
+    settings = (view != "completed" ? Setting.as_hash(:task_due_at_hint) : Setting.as_hash(:task_completed))
+
+    settings.keys.inject({}) do | hash, due |
       hash[due] = case view
       when "pending"
-        [ Factory(:task, :user => user, :asset => Factory(:account), :due_at_hint => due.to_s, :assigned_to => nil) ]
+        [ Factory(:task, :user => user, :due_at_hint => due.to_s) ]
       when "assigned"
-        [ Factory(:task, :user => user, :asset => Factory(:account), :due_at_hint => due.to_s, :assigned_to => 1) ]
+        [ Factory(:task, :user => user, :due_at_hint => due.to_s, :assigned_to => 1) ]
       when "completed"
-        [ Factory(:task, :user => user, :asset => Factory(:account), :due_at_hint => due.to_s, :completed_at => Time.now) ]
+        completed_at = case due
+          when :completed_today
+            Date.today
+          when :completed_yesterday
+            Date.yesterday
+          when :completed_last_week
+            Date.today.beginning_of_week - 7.days
+          when :completed_this_month
+            Date.today.beginning_of_month
+          when :completed_last_month
+            Date.today.beginning_of_month - 1.day
+        end
+        [ Factory(:task, :user => user, :due_at_hint => due.to_s, :completed_at => completed_at) ]
       end
       hash
     end
@@ -35,29 +52,27 @@ describe TasksController do
       update_sidebar
     end
 
-    it "should expose all tasks as @tasks and render [index] template" do
-      @tasks = produce_tasks(@current_user, "pending")
+    VIEWS.each do |view|
+      it "should expose all tasks as @tasks and render [index] template for #{view} view" do
+        @tasks = produce_tasks(@current_user, view)
 
-      get :index, :view => "pending"
-      assigns[:tasks].keys.should == @tasks.keys
-      (assigns[:tasks].values - @tasks.values).should == []
-      assigns[:task_total].should == @task_total
-      response.should render_template("tasks/index")
-    end
+        get :index, :view => view
+        assigns[:tasks].keys.should == @tasks.keys
+        (assigns[:tasks].values - @tasks.values).should == []
+        assigns[:task_total].should == @task_total
+        response.should render_template("tasks/index")
+      end
 
-    describe "with mime type of xml" do
-
-      it "should render all tasks as xml" do
-        @tasks = produce_tasks(@current_user, "pending")
+      it "should render all tasks as xml for #{view} view" do
+        @tasks = produce_tasks(@current_user, view)
 
         # Convert symbol keys to strings, otherwise to_xml fails (Rails 2.2).
         @tasks = @tasks.inject({}) { |tasks, (k,v)| tasks[k.to_s] = v; tasks }
 
         request.env["HTTP_ACCEPT"] = "application/xml"
-        get :index, :view => "pending"
+        get :index, :view => view
         response.body.should == @tasks.to_xml
       end
-
     end
 
   end
@@ -65,199 +80,270 @@ describe TasksController do
   # GET /tasks/1
   # GET /tasks/1.xml
   #----------------------------------------------------------------------------
-  # describe "responding to GET show" do
-  # 
-  #   it "should expose the requested task as @task" do
-  #     Task.should_receive(:find).with("37").and_return(mock_task)
-  #     get :show, :id => "37"
-  #     assigns[:task].should equal(mock_task)
-  #   end
-  #   
-  #   describe "with mime type of xml" do
-  # 
-  #     it "should render the requested task as xml" do
-  #       request.env["HTTP_ACCEPT"] = "application/xml"
-  #       Task.should_receive(:find).with("37").and_return(mock_task)
-  #       mock_task.should_receive(:to_xml).and_return("generated XML")
-  #       get :show, :id => "37"
-  #       response.body.should == "generated XML"
-  #     end
-  # 
-  #   end
-  #   
-  # end
-  # 
-  # # GET /tasks/new
-  # # GET /tasks/new.xml                                                     AJAX
-  # #----------------------------------------------------------------------------
-  # describe "responding to GET new" do
-  # 
-  #   it "should expose a new task as @task" do
-  #     Task.should_receive(:new).and_return(mock_task)
-  #     get :new
-  #     assigns[:task].should equal(mock_task)
-  #   end
-  # 
-  # end
-  # 
-  # # GET /tasks/1/edit                                                      AJAX
-  # #----------------------------------------------------------------------------
-  # describe "responding to GET edit" do
-  # 
-  #   it "should expose the requested task as @task" do
-  #     Task.should_receive(:find).with("37").and_return(mock_task)
-  #     get :edit, :id => "37"
-  #     assigns[:task].should equal(mock_task)
-  #   end
-  # 
-  # end
-  # 
-  # # POST /tasks
-  # # POST /tasks.xml                                                        AJAX
-  # #----------------------------------------------------------------------------
-  # describe "responding to POST create" do
-  # 
-  #   describe "with valid params" do
-  #     
-  #     before(:each) do
-  #       update_sidebar
-  #     end
-  # 
-  #     it "should expose a newly created task as @task" do
-  #       @task = mock_task(:save => true, :deleted_at => nil, :completed_at => nil, :due_at_hint => nil)
-  #       Task.should_receive(:new).with({'these' => 'params'}).and_return(@task)
-  #       @task.should_receive(:hint).and_return("due_later")
-  #       post :create, :task => {:these => 'params'}
-  #       assigns(:task).should equal(mock_task)
-  #     end
-  # 
-  #     it "should render 'create' template" do
-  #       @task = mock_task(:save => true, :deleted_at => nil, :completed_at => nil, :due_at_hint => nil)
-  #       Task.stub!(:new).and_return(@task)
-  #       @task.should_receive(:hint).and_return("due_later")
-  #       post :create, :task => {}
-  #       response.should render_template('create')
-  #     end
-  #     
-  #   end
-  #   
-  #   describe "with invalid params" do
-  # 
-  #     it "should expose a newly created but unsaved task as @task" do
-  #       @task = mock_task(:save => false, :deleted_at => nil, :completed_at => nil, :due_at_hint => nil)
-  #       Task.stub!(:new).with({'these' => 'params'}).and_return(@task)
-  #       post :create, :task => {:these => 'params'}
-  #       assigns(:task).should equal(mock_task)
-  #     end
-  # 
-  #     it "should re-render the 'create' template" do
-  #       @task = mock_task(:save => false, :deleted_at => nil, :completed_at => nil, :due_at_hint => nil)
-  #       Task.stub!(:new).and_return(@task)
-  #       post :create, :task => {}
-  #       response.should render_template('create')
-  #     end
-  #     
-  #   end
-  #   
-  # end
-  # 
-  # # PUT /tasks/1
-  # # PUT /tasks/1.xml                                                       AJAX
-  # #----------------------------------------------------------------------------
-  # describe "responding to PUT udpate" do
-  # 
-  #   describe "with valid params" do
-  # 
-  #     it "should update the requested task" do
-  #       Task.should_receive(:find).with("37").and_return(mock_task)
-  #       mock_task.should_receive(:update_attributes).with({'these' => 'params'})
-  #       put :update, :id => "37", :task => {:these => 'params'}
-  #     end
-  # 
-  #     it "should expose the requested task as @task" do
-  #       Task.stub!(:find).and_return(mock_task(:update_attributes => true))
-  #       put :update, :id => "1"
-  #       assigns(:task).should equal(mock_task)
-  #     end
-  # 
-  #     it "should redirect to the task" do
-  #       Task.stub!(:find).and_return(mock_task(:update_attributes => true))
-  #       put :update, :id => "1"
-  #       response.should redirect_to(task_url(mock_task))
-  #     end
-  # 
-  #   end
-  #   
-  #   describe "with invalid params" do
-  # 
-  #     it "should update the requested task" do
-  #       Task.should_receive(:find).with("37").and_return(mock_task)
-  #       mock_task.should_receive(:update_attributes).with({'these' => 'params'})
-  #       put :update, :id => "37", :task => {:these => 'params'}
-  #     end
-  # 
-  #     it "should expose the task as @task" do
-  #       Task.stub!(:find).and_return(mock_task(:update_attributes => false))
-  #       put :update, :id => "1"
-  #       assigns(:task).should equal(mock_task)
-  #     end
-  # 
-  #     it "should re-render the 'edit' template" do
-  #       Task.stub!(:find).and_return(mock_task(:update_attributes => false))
-  #       put :update, :id => "1"
-  #       response.should render_template('edit')
-  #     end
-  # 
-  #   end
-  # 
-  # end
-  # 
-  # # DELETE /tasks/1
-  # # DELETE /tasks/1.xml                                                    AJAX
-  # #----------------------------------------------------------------------------
-  # describe "responding to DELETE destroy" do
-  # 
-  #   before(:each) do
-  #     update_sidebar
-  #   end
-  # 
-  #   it "should destroy the requested task" do
-  #     @task = mock_task(:deleted_at => nil, :completed_at => nil, :due_at_hint => nil)
-  #     Task.should_receive(:find).with("42").and_return(@task)
-  #     Task.should_receive(:bucket).with(@current_user, "due_asap", "pending").and_return(nil)
-  #     @task.should_receive(:hint).and_return("due_later")
-  #     mock_task.should_receive(:destroy)
-  #     delete :destroy, :id => "42", :bucket => "due_asap", :view => "pending"
-  #   end
-  # 
-  #   it "should render 'destroy' template" do
-  #     @task = mock_task(:destroy => true, :deleted_at => nil, :completed_at => nil, :due_at_hint => nil)
-  #     Task.should_receive(:find).with("42").and_return(@task)
-  #     Task.should_receive(:bucket).with(@current_user, "due_today", "assigned").and_return(nil)
-  #     @task.should_receive(:hint).and_return("due_later")
-  #     delete :destroy, :id => "42", :bucket => "due_today", :view => "assigned"
-  #     response.should render_template('destroy')
-  #   end
-  # 
-  # end
-  # 
-  # # PUT /tasks/1/complete
-  # # PUT /leads/1/complete.xml                                              AJAX
-  # #----------------------------------------------------------------------------
-  # describe "responding to PUT complete" do
-  # 
-  #   it "should..." do
-  #   end
-  #   
-  # end
-  # 
-  # # Ajax request to filter out a list of tasks.                            AJAX
-  # #----------------------------------------------------------------------------
-  # describe "responding to GET filter" do
-  # 
-  #   it "should..." do
-  #   end
-  #   
-  # end
+  describe "responding to GET show" do
+
+    VIEWS.each do |view|
+      it "should render tasks index for #{view}  view (since a task doesn't have landing page)" do
+        get :show, :id => 42, :view => view
+        response.should render_template("tasks/index")
+      end
+
+      it "should render the requested task as xml for #{view} view" do
+        request.env["HTTP_ACCEPT"] = "application/xml"
+        @task = Factory(:task, :id => 42)
+
+        get :show, :id => 42, :view => "pending"
+        response.body.should == @task.to_xml
+      end
+    end
+
+  end
+
+  # GET /tasks/new
+  # GET /tasks/new.xml                                                     AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to GET new" do
+
+    it "should expose a new task as @task and render [new] template" do
+      account = Factory(:account, :user => @current_user)
+      @task = Factory.build(:task, :user => @current_user, :asset => account)
+      Task.stub!(:new).and_return(@task)
+      @users = [ Factory(:user) ]
+      @due_at_hint = Setting.task_due_at_hint[1..-1] << [ "On Specific Date...", :specific_time ]
+      @category = Setting.invert(:task_category)
+
+      xhr :get, :new
+      assigns[:task].should == @task
+      assigns[:users].should == @users
+      assigns[:due_at_hint].should == @due_at_hint
+      assigns[:category].should == @category
+      response.should render_template("tasks/new")
+    end
+
+    it "should find related asset when necessary" do
+      @asset = Factory(:account, :id => 42)
+
+      xhr :get, :new, :related => "account_42"
+      assigns[:asset].should == @asset
+      response.should render_template("tasks/new")
+    end
+
+  end
+
+  # GET /tasks/1/edit                                                      AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to GET edit" do
+
+    it "should expose the requested task as @task and render [edit] template" do
+      @asset = Factory(:account, :user => @current_user)
+      @task = Factory(:task, :id => 42, :user => @current_user, :asset => @asset)
+      @users = [ Factory(:user) ]
+      @due_at_hint = Setting.task_due_at_hint[1..-1] << [ "On Specific Date...", :specific_time ]
+      @category = Setting.invert(:task_category)
+
+      xhr :get, :edit, :id => 42
+      assigns[:task].should == @task
+      assigns[:users].should == @users
+      assigns[:due_at_hint].should == @due_at_hint
+      assigns[:category].should == @category
+      assigns[:asset].should == @asset
+      response.should render_template("tasks/edit")
+    end
+
+    it "should find previously open task when necessary" do
+      @task = Factory(:task, :id => 42, :user => @current_user)
+      @previous = Factory(:task, :id => 999, :user => @current_user)
+
+      xhr :get, :edit, :id => 42, :previous => 999
+      assigns[:task].should == @task
+      assigns[:previous].should == @previous
+      response.should render_template("tasks/edit")
+    end
+
+  end
+
+  # POST /tasks
+  # POST /tasks.xml                                                        AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to POST create" do
+
+    describe "with valid params" do
+
+      it "should expose a newly created task as @task and render [create] template" do
+        @task = Factory.build(:task, :user => @current_user)
+        Task.stub!(:new).and_return(@task)
+
+        xhr :post, :create, :task => { :name => "Hello world" }
+        assigns(:task).should == @task
+        assigns(:view).should == "pending"
+        assigns[:task_total].should == nil
+        response.should render_template("tasks/create")
+      end
+
+      [ "", "?view=pending", "?view=assigned", "?view=completed" ].each do |view|
+        it "should update tasks sidebar when [create] is being called from [/tasks#{view}] page" do
+          @task = Factory.build(:task, :user => @current_user)
+          Task.stub!(:new).and_return(@task)
+
+          request.env["HTTP_REFERER"] = "http://localhost/tasks#{view}"
+          xhr :post, :create, :task => { :name => "Hello world" }
+          assigns[:task_total].should be_an_instance_of(Hash)
+        end
+      end
+
+    end
+
+    describe "with invalid params" do
+
+      it "should expose a newly created but unsaved task as @lead and still render [create] template" do
+        @task = Factory.build(:task, :user => @current_user)
+        Task.stub!(:new).and_return(@task)
+
+        xhr :post, :create, :task => { :name => nil }
+        assigns(:task).should == @task
+        assigns(:view).should == "pending"
+        assigns[:task_total].should == nil
+        response.should render_template("tasks/create")
+      end
+
+    end
+
+  end
+
+  # PUT /tasks/1
+  # PUT /tasks/1.xml                                                       AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to PUT udpate" do
+
+    describe "with valid params" do
+
+      it "should update the requested task, expose it as @task, and render [update] template" do
+        @task = Factory(:task, :id => 42, :name => "Hi", :user => @current_user)
+
+        xhr :put, :update, :id => 42, :task => { :name => "Hello" }
+        @task.reload.name.should == "Hello"
+        assigns(:task).should == @task
+        assigns(:view).should == "pending"
+        assigns[:task_total].should == nil
+        response.should render_template("tasks/update")
+      end
+
+      [ "", "?view=pending", "?view=assigned", "?view=completed" ].each do |view|
+        it "should update tasks sidebar when [update] is being called from [/tasks#{view}] page" do
+          @task = Factory(:task, :id => 42, :name => "Hi", :user => @current_user)
+
+          request.env["HTTP_REFERER"] = "http://localhost/tasks#{view}"
+          xhr :put, :update, :id => 42, :task => { :name => "Hello" }
+          assigns[:task_total].should be_an_instance_of(Hash)
+        end
+      end
+
+    end
+
+    describe "with invalid params" do
+
+      it "should not update the task, but still expose it as @task and render [update] template" do
+        @task = Factory(:task, :id => 42, :name => "Hi", :user => @current_user)
+
+        xhr :put, :update, :id => 42, :task => { :name => nil }
+        @task.reload.name.should == "Hi"
+        assigns(:task).should == @task
+        assigns(:view).should == "pending"
+        assigns[:task_total].should == nil
+        response.should render_template("tasks/update")
+      end
+
+    end
+
+  end
+
+  # DELETE /tasks/1
+  # DELETE /tasks/1.xml                                                    AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to DELETE destroy" do
+
+    it "should destroy the requested task and render [destroy] template" do
+      @task = Factory(:task, :id => 42, :user => @current_user)
+
+      xhr :delete, :destroy, :id => 42, :bucket => "due_asap"
+      assigns(:task).should == @task
+      assigns(:view).should == "pending"
+      assigns[:task_total].should == nil
+      response.should render_template("tasks/destroy")
+    end
+
+    [ "", "?view=pending", "?view=assigned", "?view=completed" ].each do |view|
+      it "should update sidebar when [destroy] is being called from [/tasks#{view}] page and bucket is not empty" do
+        @task = Factory(:task, :id => 42, :user => @current_user)
+
+        request.env["HTTP_REFERER"] = "http://localhost/tasks#{view}"
+        xhr :delete, :destroy, :id => 42, :bucket => "due_asap"
+        assigns[:task_total].should be_an_instance_of(Hash)
+      end
+
+      it "should not update sidebar when [destroy] is being called from [/tasks#{view}] page but the bucket is empty" do
+        @task = Factory(:task, :id => 42, :user => @current_user)
+
+        request.env["HTTP_REFERER"] = "http://localhost/tasks#{view}"
+        xhr :delete, :destroy, :id => 42
+        assigns[:task_total].should == nil
+      end
+    end
+
+  end
+
+  # PUT /tasks/1/complete
+  # PUT /leads/1/complete.xml                                              AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to PUT complete" do
+
+    it "should change task status, expose task as @task, and render [complete] template" do
+      @task = Factory(:task, :completed_at => nil, :id => 42, :user => @current_user)
+
+      xhr :put, :complete, :id => 42
+      @task.reload.completed_at.should_not == nil
+      assigns[:task].should == @task
+      assigns[:task_total].should == nil
+      response.should render_template("tasks/complete")
+    end
+
+    it "should change update tasks sidebar if bucket is not empty" do
+      @task = Factory(:task, :completed_at => nil, :id => 42, :user => @current_user)
+
+      xhr :put, :complete, :id => 42, :bucket => "due_asap"
+      assigns[:task_total].should be_an_instance_of(Hash)
+    end
+
+  end
+
+  # Ajax request to filter out a list of tasks.                            AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to GET filter" do
+
+    VIEWS.each do |view|
+      it "should remove a filter from session and render [filter] template for #{view} view" do
+        name = "filter_by_task_#{view}"
+        session[name] = "due_asap,due_today,due_tomorrow"
+
+        xhr :get, :filter, :filter => "due_asap", :view => view
+        session[name].should_not include("due_asap")
+        session[name].should include("due_today")
+        session[name].should include("due_tomorrow")
+        response.should render_template("tasks/filter")
+      end
+
+      it "should add a filter from session and render [filter] template for #{view} view" do
+        name = "filter_by_task_#{view}"
+        session[name] = "due_today,due_tomorrow"
+
+        xhr :get, :filter, :checked => "true", :filter => "due_asap", :view => view
+        session[name].should include("due_asap")
+        session[name].should include("due_today")
+        session[name].should include("due_tomorrow")
+        response.should render_template("tasks/filter")
+      end
+    end
+
+  end
 
 end
